--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -16,6 +15,20 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">
+
+  <!-- SEO -->
+  <title>Campal | 캠팔 | 캠핑 렌탈 플랫폼</title>
+  <meta name="description" content="캠팔을 통해서 저렴하게 캠핑 장비를 대여 해보세요. 캠핑 장비 렌탈 플랫폼 Campal." />
+  <link rel="cononical" href="http://www.campal.co.kr/">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Campal | 캠팔" />
+  <meta property="og:description" content="캠팔을 통해서 저렴하게 캠핑 장비를 대여 해보세요. 캠핑 장비 렌탈 플랫폼 Campal." />
+  <meta property="og:url" content="http://www.campal.co.kr" />
+  <meta name="naver-site-verification" content="ce4e9605c01b2796c49936fd312d1a90f55ac81c" />
+  
+
+  <!-- <meta property="og:image" content="http://image.viewday.co.kr/static/images/viewday_logo_410x200.jpg"></meta> -->
+
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,7 +38,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Camping Rental | 캠핑 렌탈</title>
+  
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-SSJHCQRDGM"></script>
   <script>
